--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,12 +11,12 @@ const address2 = "3355 Santa Rosa Ave., Santa Rosa, CA";
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 2rem;
+   
     padding: 1rem 2rem;
-    background-color: #ffffffeb;
+    background-color: #41f007;
 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border: #002879 8px solid;
+    border-top: #9c0202 8px solid;
   }
   footer > div {
     display: flex;
@@ -58,7 +58,7 @@ const address2 = "3355 Santa Rosa Ave., Santa Rosa, CA";
   }
 
   .right-section {
-    background-color: #790000;
+    background-color: #002f76;
     color: white;
     padding: 1rem 2rem;
     border-radius: 2px;
