--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,20 +1,25 @@
 /* Styles Applied Across All Apps Views */
-
 body {
   font-family: "Poppins", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   /* background: linear-gradient(135deg, #161f28, #000000); */
-  /* background: linear-gradient(135deg, #ffffff, #6d1b1b); */
+  background: linear-gradient(135deg, #000000, #000000);
+  /* color: #f5f5f5; */
   line-height: 1.6;
 }
 
+
+hr {
+  border: 4px solid #6a0000;
+}
 .nav-container {
-  max-width: 1000px;
+  /* max-width: 1000px; */
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
-
+  background-color: rgb(255, 255, 255);
+ 
   /* display: flex;
   align-items: center;
   justify-content: space-between;
