fixed the title for the imageslider

--- a/src/components/ImageSlideSection.astro
+++ b/src/components/ImageSlideSection.astro
@@ -28,14 +28,16 @@ const { title, description } = Astro.props;
 
   .right-column h2 {
     font-size: 2.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0rem;
     color:#900020;
+    /* text-shadow: #ffffff 1px 1px 4px; */
     
   }
 
   .right-column p {
     font-size: 1.25rem;
     line-height: 1.6;
+    color: #e9ddd4
   }
 
   @media (max-width: 768px) {
