--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -149,7 +149,7 @@ const subName = "Estilo Jalisco";
           <img src={slideUno.src} alt="Nature Image 1" class="active" />
           <img src={slideDos.src} alt="Nature Image 2" />
           <img src={slideTres.src} alt="Nature Image 3" />
-          <!-- <img src={slideTres.src} alt="Nature Image 4" /> -->
+          <img src={slideTres.src} alt="Nature Image 4" />
         </div>
         <div class="carousel-nav">
           <button class="prev-btn" aria-label="Previous Image">&#10094;</button>
@@ -172,11 +172,11 @@ const subName = "Estilo Jalisco";
             tabindex="-1"
             aria-selected="false"
             aria-controls="slide3"></span>
-          <!-- <span
+          <span
             role="tab"
             tabindex="-1"
             aria-selected="false"
-            aria-controls="slide4"></span> -->
+            aria-controls="slide4"></span>
         </div>
       </div>
  <h2>Come Check Us Out!</h2>
