--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -27,8 +27,8 @@ const subName = "Estilo Jalisco";
 </div>
 <main>
     <ImageSlideSection
-  title="Discover Our Delicious Menu"
-  description="Explore a variety of authentic dishes with fresh ingredients and bold flavors. Our image slider showcases some of our most popular plates that will surely satisfy your cravings."
+  title="Authentic Mexican Food"
+  description="Explore our amazing dishes with fresh ingredients and authenticate flavors. Satisfy your cravings with some traditional mexican food."
 />
   <section class="">
     <h2 class="section-title">Popular Plates</h2>
@@ -142,7 +142,7 @@ const subName = "Estilo Jalisco";
     background-repeat: no-repeat;
     object-fit: cover;
 
-    border-top: #ff0808 6px solid;
+    border-top: #F2D732 6px solid;
     
   }
   .section-title {
@@ -150,7 +150,7 @@ const subName = "Estilo Jalisco";
     font-size: 2rem;
     font-weight: 700;
     margin: 5px 0;
-    color: #e9ddd4;
+    color: #900020;
     /* width: 100%;
       max-width: 1000px; */
   }
@@ -291,7 +291,7 @@ const subName = "Estilo Jalisco";
     color: #fff;
     box-shadow: 0 6px 16px rgba(100, 97, 97, 0.7);
 
-    background-color: #900020;
+    background-color: #1C5898;
     border: none;
     border-radius: 8px;
     cursor: pointer;
@@ -302,9 +302,12 @@ const subName = "Estilo Jalisco";
   }
   .view-more-btn:hover,
   .view-more-btn:focus {
-    background-color: #d20202;
+    background-color: #ffffff;
+    color: #1C5898;
+    border: #1C5898 4px solid;
     outline: none;
-    box-shadow: 0 6px 16px rgba(194, 58, 58, 0.7);
+    box-shadow: 0 6px 16px rgba(58, 87, 194, 0.7);
+    
   }
 
   .review-card {
