--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,10 +13,10 @@ const address2 = "3355 Santa Rosa Ave., Santa Rosa, CA";
     align-items: center;
    
     padding: 1rem 2rem;
-    background-color: #41f007;
+    background-color: #ffffff;
 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-top: #9c0202 8px solid;
+    border-top: #F2D732 8px solid;
   }
   footer > div {
     display: flex;
