fixed about page layout

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const address2 = "3355 Santa Rosa Ave., Santa Rosa, CA";
     align-items: center;
    
     padding: 1rem 2rem;
-    background-color: #ffffff;
+    background-color: #9b0404;
 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-top: #F2D732 8px solid;
