--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -211,12 +211,7 @@ const subName = "Estilo Jalisco";
     /* -webkit-text-stroke: 0.5px rgb(255, 255, 255); */
   }
 
-  /* .box {
-    padding: 16px;
-    background: rgb(118, 4, 4);
-    border-radius: 16px;
-   
-  } */
+ 
    .box {
     height: 100vh;
     width: 100%;
@@ -285,6 +280,7 @@ const subName = "Estilo Jalisco";
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
+    margin-bottom: 20px;
     padding: 12px 24px;
     font-size: 1.2rem;
     font-weight: 600;
