--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,11 @@ import '../styles/global.css';
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+        font-family: "Poppins", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
     }
+  
+   
     
     .content {
       flex-grow: 1;
