--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,22 +1,30 @@
 /* Styles Applied Across All Apps Views */
 
- :root {
-    --button-bg: #007bff;
-    --button-text: #ffffff;
-    --button-text-hover: #ffdd57;
-    --button-border-radius: 8px;
-    --transition-duration: 0.3s;
-  }
+:root {
+  --button-bg: #007bff;
+  --button-text: #ffffff;
+  --button-text-hover: #ffdd57;
+  --button-border-radius: 8px;
+  --transition-duration: 0.3s;
+}
 
 body {
   font-family: "Poppins", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  /* background: linear-gradient(135deg, #161f28, #000000); */
   background: linear-gradient(135deg, #000000, #000000);
-  /* color: #f5f5f5; */
+  color: #f5f5f5;
   line-height: 1.6;
 }
 
-
+.hero-image {
+  width: 100%;
+}
+.hero-image img {
+  display: block;
+  margin: 0 auto;
+  margin-top:  20px;
+  border-radius: 8px;
+  box-shadow: red 0px 5px 15px;
+}
 hr {
   border: 4px solid #6a0000;
 }
@@ -28,7 +36,7 @@ hr {
   align-items: center;
   gap: 10px;
   background-color: rgb(255, 255, 255);
- 
+
   /* display: flex;
   align-items: center;
   justify-content: space-between;
