--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,12 +11,10 @@ const address2 = "3355 Santa Rosa Ave., Santa Rosa, CA";
     display: flex;
     justify-content: space-between;
     align-items: center;
-   
     padding: 1rem 2rem;
-    background-color: #9b0404;
-
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-top: #F2D732 8px solid;
+    border-top: #8C001A 8px solid;
+    background-color: #fff;
   }
   footer > div {
     display: flex;
@@ -102,12 +100,3 @@ const address2 = "3355 Santa Rosa Ave., Santa Rosa, CA";
     </div>
   </div>
 </footer>
-<!-- .left-section {
-    flex: 1;
-  }
-  .right-section {
-    flex: 1;
-    background-color: rgb(151, 6, 6);
-    color: white;
-    padding: 1rem 2rem;
-  } -->
