--- a/src/components/ImageSlideSection.astro
+++ b/src/components/ImageSlideSection.astro
@@ -30,7 +30,7 @@ const { title, description } = Astro.props;
     font-size: 2.5rem;
     margin-bottom: 0rem;
     color:#900020;
-    /* text-shadow: #ffffff 1px 1px 4px; */
+    text-shadow: #ffffff 1px 1px 4px;
     
   }
 
@@ -48,10 +48,12 @@ const { title, description } = Astro.props;
     .left-column,
     .right-column {
       flex: 1 1 100%;
+      text-align: center;
     }
     .right-column h2 {
       font-size: 2rem;
       margin-top: 1rem;
+      
     }
   }
 </style>
