--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -7,7 +7,7 @@ import ImageSlideSection from "./ImageSlideSection.astro";
 import banneIMG from "../assets/bg-nak.jpg";
 // import "../styles/fuego.css";
 
-import slideUno from "../assets/torta.jpg";
+import torta from '../assets/torta.jpg';
 import slideDos from "../assets/trestacos.jpeg";
 import slideTres from "../assets/huevos.jpg";
 import cuatro from "../assets/tostada.jpeg";
@@ -43,7 +43,7 @@ const subName = "Estilo Jalisco";
         tabindex="0"
         aria-label="Mountain landscape image"
       >
-        <img src={slideUno.src} />
+        <img src={torta.src} />
         <!-- <div class="card-caption">Mountain Landscape</div> -->
       </article>
       <article
