--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -39,7 +39,7 @@ const subName = "Estilo Jalisco";
         tabindex="0"
         aria-label="Mountain landscape image"
       >
-        <Image src={torta} alt="A description of my image." />
+        <Image src={slideDos} alt="A description of my image." />
 
         <!-- <div class="card-caption">Mountain Landscape</div> -->
       </article>
