add tailwind and rename project

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,8 @@
 /* Styles Applied Across All Apps Views */
 
+@import "tailwindcss";
+
+
 :root {
   --button-bg: #007bff;
   --button-text: #ffffff;
